--- a/get-started/introduction.mdx
+++ b/get-started/introduction.mdx
@@ -1,22 +1,20 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: "Explore our guides and examples to integrate Moderation API."
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+- Identify personal information and mask it out - also if the user attempts to evade detection.
+- Detect toxic content in real time.
+- Detect and remove profanity - also if the user attempts to evade detection.
+- Analyze the quality of a text and prevent spam.
+- Detect the language of a text.
+- Remove sensitive data from text.
 
-## Setting up
+<img className="block " src="/images/intro.png" alt="Intro img" />
 
-The first step to world-class documentation is setting up your editing environnments.
+## Not a developer?
+
+If you're not a developer, you can still use the API. We have many [integrations and no-code solution](https://moderationapi.com/integrations) that allows you to create projects and moderate content without writing a single line of code.
 
 <CardGroup cols={2}>
   <Card
