--- a/get-started/introduction.mdx
+++ b/get-started/introduction.mdx
@@ -10,7 +10,9 @@ description: "Explore our guides and examples to integrate Moderation API."
 - Detect the language of a text.
 - Remove sensitive data from text.
 
-<img className="block " src="/images/intro.png" alt="Intro img" />
+<Frame>
+  <img className="block " src="/images/intro.png" alt="Intro img" />
+</Frame>
 
 ## Not a developer?
 
