--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,7 +1,11 @@
 ---
-title: 'Introduction'
-description: 'Example section for showcasing API endpoints'
+title: "Introduction"
+description: "Example section for showcasing API endpoints"
 ---
+
+## Not a developer?
+
+If you're not a developer, you can still use the API. We have many [integrations and no-code solutions](https://moderationapi.com/integrations) that allows you to create projects and moderate content without writing a single line of code.
 
 <Note>
   If you're not looking to build API reference documentation, you can delete
