--- a/get-started/introduction.mdx
+++ b/get-started/introduction.mdx
@@ -3,69 +3,51 @@ title: Introduction
 description: "Explore our guides and examples to integrate Moderation API."
 ---
 
-- Identify personal information and mask it out - also if the user attempts to evade detection.
-- Detect toxic content in real time.
-- Detect and remove profanity - also if the user attempts to evade detection.
-- Analyze the quality of a text and prevent spam.
-- Detect the language of a text.
-- Remove sensitive data from text.
-
 <Frame>
   <img className="block " src="/images/intro.png" alt="Intro img" />
 </Frame>
 
-## Not a developer?
+Moderation API is a full stack content moderation solution that helps you streamline your content moderation. You get state-of-the-art AI models for automated content moderation, a full-featured moderation dashboard for manual moderation, analytics for your content, and cutomizable workflows to integrate with your platform.
 
-If you're not a developer, you can still use the API. We have many [integrations and no-code solution](https://moderationapi.com/integrations) that allows you to create projects and moderate content without writing a single line of code.
+Moderation API allows you to easily:
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+- Automate content moderation
+- Create custom moderation flows
+- Scale your platform safely
+- Identify bad actors
+- Get insights into your content
+- Build self-learning AI models
+- Hire human moderators
 
-## Make it yours
+## Guides to get started
 
-Update your docs to your brand and add valuable content for the best user conversion.
+Can't find your use case? [Contact us](https://moderationapi.com/sales) and we'll help you get started.
 
 <CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
+  <Card title="Quickstart" icon="rocket" href="/get-started/quickstart">
+    Automate your content moderation in 5 minutes.
   </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
+  <Card title="Design a flow" icon="arrows-split-up-and-left">
+    Learn how to design a moderation flow and integrate it on your platform.
   </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
+  <Card title="Moderation for chats" icon="comments">
+    Automatically moderate chats in real-time.
   </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/showcase"
-  >
-    Check out our showcase of our favorite documentation
+  <Card title="Moderation for marketplaces" icon="shop">
+    Detect intent to circumvent platform fees and remove illegal listings.
   </Card>
+    <Card title="Moderation for communities" icon="users"  >
+    Automatically moderate content in online communities like forums or social media.
+  </Card>
+ 
+  <Card title="Identify self harm" icon="heart-crack">
+    Automatically detect intent of self harm and bring in human support.
+  </Card>
+   <Card title="Handle user flagged content" icon="flag">
+    Allow users to flag content and handle it in your moderation flow.
+  </Card>
+  <Card title="Self-learning AI models" icon="sparkles">
+    Combine human and AI moderation to create self-learning models.
+  </Card>
+
 </CardGroup>
