--- a/get-started/quickstart.mdx
+++ b/get-started/quickstart.mdx
@@ -41,7 +41,7 @@ After configuring up your project you can submit content to the project for anal
 
 Use the API key to authenticate your requests to the API. You can submit content for analysis by sending a `POST` request to the `/api/v1/moderation/text` endpoint.
 
-```javascript
+```javascript Text moderation example
 const data = await fetch("https://moderationapi.com/api/v1/moderation/text", {
   method: "POST",
   headers: {
