--- a/content-moderation/overview.mdx
+++ b/content-moderation/overview.mdx
@@ -18,19 +18,23 @@ After you've created a project, you can submit content for moderation.
 
 <CardGroup cols={2}>
 
-<Card title="Text" icon="align-left" href="content-moderation/text">
+<Card title="Text" icon="align-left" href="/content-moderation/analyze-text">
   Text moderation
 </Card>
 
-<Card title="Image" icon="image" href="content-moderation/image">
+<Card title="Image" icon="image" href="/content-moderation/analyze-images">
   Image moderation
 </Card>
 
-<Card title="Video" icon="film" href="content-moderation/video">
+<Card title="Video" icon="film" href="/content-moderation/analyze-videos">
   Video moderation
 </Card>
 
-<Card title="Audio" icon="waveform-lines" href="content-moderation/audio">
+<Card
+  title="Audio"
+  icon="waveform-lines"
+  href="/content-moderation/analyze-audio"
+>
   Audio moderation
 </Card>
 
