--- a/content-moderation/analyze-text.mdx
+++ b/content-moderation/analyze-text.mdx
@@ -142,7 +142,7 @@ The [text moderation endpoint](/api-reference) allows for a `doNotStore` boolean
 If you set `doNotStore` to `true`, the content will not be stored and only pass through the moderation models. <br></br>
 
 <Warning>
-  If you set `doNotStore` to `true`, the content will not be available in the
-  [content queues](/content-queues) and you will not be able to train custom
-  models based on previous requests.
+  If you set `doNotStore` to `true`, the item will not enter the [content
+  queues](/content-queues) and you will not be able to train custom models based
+  on previous requests.
 </Warning>
