--- a/content-moderation/overview.mdx
+++ b/content-moderation/overview.mdx
@@ -8,7 +8,11 @@ description: "Learn to set up projects and submit content for moderation"
 
 Before you can submit content for moderation, you need to create a project. Use projects to define the moderation rules for your content.
 
-<Card title="Project setup" icon="page" href="content-moderation/setup-project">
+<Card
+  title="Project setup"
+  icon="page"
+  href="/content-moderation/project-setup"
+>
   How to create a project.
 </Card>
 
