--- a/get-started/concepts.mdx
+++ b/get-started/concepts.mdx
@@ -5,19 +5,34 @@ description: "A quick overview of the concepts used in the moderation API."
 
 ## Projects
 
-A project is used to configure how you want to analyze content. You do this by adding models to your project and adjust the project settings to your needs. <br />
+A project is used to configure how you want to analyze content. You do this by adding models to your project and adjust the project settings to your needs. <br></br>
 
 Each project has its own API key, so you can create multiple projects for example to separate different types of content or to separate your production and development environments.
 
 ## Models
 
-Models are used to analyze content. You can add multiple models to a project. Each model has its own settings and can be used to analyze content in a different way.<br />
+Models are used to analyze content. You can add multiple models to a project. Each model has its own settings and can be used to analyze content in a different way. <br></br>
 
-There are 3 classes of models:
+#### 3 classes of models
 
-- **Readymade models**: These are pre-built models that can be used to analyze content without any additional training.
-- **Custom models**: These are models that are trained on user-provided data to analyze content specific to their use case.
-- **AI agents**: AI agents is a way of creating your own model, without prior training data. Just provide the AI with your own set of rules.
+<CardGroup cols={3}>
+
+<Card title="Ready-made models" href="/models/overview" icon="cube">
+  These are pre-built models that can be used to analyze content without any
+  additional training.
+</Card>
+
+<Card title="Custom models" href="/custom-models/overview" icon="sparkles">
+  These are models that are trained on user-provided data to analyze content
+  specific to their use case.
+</Card>
+
+<Card title="AI agents" href="/ai-agents/overview" icon="robot">
+  AI agents is a way of creating your own model, without prior training data.
+  Just provide the AI with your own set of rules.
+</Card>
+
+</CardGroup>
 
 ## Content queues
 
@@ -26,15 +41,15 @@ There are 3 classes of models:
   moderation dashboard.
 </Note>
 
-Content queues are used to manually review and act on content submitted to your projects. You can create multiple queues and configure what content you want in a queue by setting up filters.<br />
+Content queues are used to manually review and act on content submitted to your projects. You can create multiple queues and configure what content you want in a queue by setting up filters. <br></br>
 
-How you use the content queue is up to you. For example, you can use it to review content before it is published, or to review content that has already been published. <br />
+How you use the content queue is up to you. For example, you can use it to review content before it is published, or to review content that has already been published. <br></br>
 
 ## Queue actions
 
-When you review content in the content queue, you can take actions on the content. <br/>
+When you review content in the content queue, you can take actions on the content. <br></br>
 
-You can create your own custom actions and assign them to the queues you want. <br/>
+You can create your own custom actions and assign them to the queues you want. <br></br>
 
 Actions can be used to, for example, delete content, block a user, send content to a different queue, or send content to a human moderator.
 
@@ -45,16 +60,16 @@ Actions can be used to, for example, delete content, block a user, send content 
   your own models when you use the self-learning feature.
 </Warning>
 
-You can use the content queue to train and improve your custom models. For example, you can use the content queue to review content that has been flagged by a model, and then use the feedback to improve your models. <br />
+You can use the content queue to train and improve your custom models. For example, you can use the content queue to review content that has been flagged by a model, and then use the feedback to improve your models. <br></br>
 
 ## Quota
 
-Depending on your plan you have a certain amount of quota. <br />
+Depending on your plan you have a certain amount of quota. <br></br>
 
 Each request to your project will use a certain amount of quota. Usually this is 1 quota per request, but some models use more quota.
 
 ## Wordlists
 
-Some models can be configured to use wordlists. Wordlists are used to add custom words to the models vocabulary.<br />
+Some models can be configured to use wordlists. Wordlists are used to add custom words to the models vocabulary. <br></br>
 
-The wordlists are smart and can be used to add words with different variations. For example, if you add the word `run` to a wordlist, the model will also recognize `running`, `ran` and `ruuuun` etc.<br />
+The wordlists are smart and can be used to add words with different variations. For example, if you add the word `run` to a wordlist, the model will also recognize `running`, `ran` and `ruuuun` etc. <br></br>
