--- a/get-started/introduction.mdx
+++ b/get-started/introduction.mdx
@@ -12,7 +12,7 @@ Moderation API is a full stack content moderation solution that helps you stream
 Moderation API allows you to easily:
 
 - Automate content moderation
-- Create custom moderation flows
+- Create custom moderation workflows
 - Scale your platform safely
 - Identify bad actors
 - Get insights into your content
@@ -27,8 +27,8 @@ Can't find your use case? [Contact us](https://moderationapi.com/sales) and we'l
   <Card title="Quickstart" icon="rocket" href="/get-started/quickstart">
     Automate your content moderation in 5 minutes.
   </Card>
-  <Card title="Design a flow" icon="arrows-split-up-and-left">
-    Learn how to design a moderation flow and integrate it on your platform.
+  <Card title="Design a workflow" icon="arrows-split-up-and-left">
+    Learn how to design a moderation workflow and integrate it on your platform.
   </Card>
   <Card title="Moderation for chats" icon="comments">
     Automatically moderate chats in real-time.
