--- a/content-queues/actions.mdx
+++ b/content-queues/actions.mdx
@@ -4,6 +4,14 @@ sidebarTitle: "Actions"
 description: "Learn how to use actions to moderate content and users"
 ---
 
+<Frame>
+  <img
+    className="block "
+    src="/images/content-queue-list.png"
+    alt="Content queue for reviewing and improving automated moderation"
+  />
+</Frame>
+
 You can create custom actions to execute on content or users. The actions will show up in the selected moderation queues, and can be executed by moderators.<br></br>
 
 On way of using actions is to create a custom queues that shows only content that have had a specific action performed. This way you can move content between queues using actions. <br></br>
