--- a/content-queues/configuration.mdx
+++ b/content-queues/configuration.mdx
@@ -4,3 +4,5 @@ sidebarTitle: "Creating queues"
 ---
 
 <Note>This page is under construction.</Note>
+
+To create a new queue you can press the plus button in side bar on the queue dashboard or simply [go to the page here](https://moderationapi.com/app/moderation/new).
