--- a/content-moderation/project-setup.mdx
+++ b/content-moderation/project-setup.mdx
@@ -50,7 +50,7 @@ Each model will extend the API response with a new field: the ID of the model an
 }
 ```
 
-Find the details about each available model in the [models section](/models/ready-made-models) of the documentation. <br></br>
+Find the details about each available model in the [models section](/models/overview) of the documentation. <br></br>
 
 ## Flagging thresholds
 
