--- a/models/overview.mdx
+++ b/models/overview.mdx
@@ -11,7 +11,7 @@ description: "Get started with industry-leading models for content moderation"
     Classify text into different categories. Detect spam, profanity, and more.
   </Card>
   <Card
-    title="Entity extractors"
+    title="Entity filters"
     icon="magnifying-glass"
     href="/models/entity-extractor-overview"
   >
