--- a/content-moderation/analyze-text.mdx
+++ b/content-moderation/analyze-text.mdx
@@ -3,7 +3,7 @@ title: "Analyze text"
 sidebarTitle: "Analyze text"
 ---
 
-To analyze text, you need to send a POST request to the [text moderation endpoint](/api-reference).
+To analyze text, you need to send a POST request with the text to the [text moderation endpoint](/api-reference) and you will receive a response with the results right away.
 
 ```javascript Node.js text analysis example
 const response = await fetch(
