--- a/models/language.mdx
+++ b/models/language.mdx
@@ -3,6 +3,8 @@ title: "Language model"
 sidebarTitle: "Language"
 ---
 
+> Model key: `language`
+
 <Check>Does not count against moderation quota.</Check>
 
 Detect what language a text is written in.
