--- a/models/nsfw.mdx
+++ b/models/nsfw.mdx
@@ -3,6 +3,8 @@ title: "NSFW model"
 sidebarTitle: "NSFW"
 ---
 
+> Model key: `nsfw`
+
 Detect unsafe and sensitive topics. Useful for detecting content that might be inappropriate for children. Sensitive topics include, but are not limited to, violence, weapons, drugs, politics, religion, etc.
 
 ```json NSFW Response Example:
