--- a/models/propriety.mdx
+++ b/models/propriety.mdx
@@ -3,6 +3,8 @@ title: "Propriety model"
 sidebarTitle: "Propriety"
 ---
 
+> Model key: `propriety`
+
 Detect sexual and flirty language. Closely related to the toxicity model but specialized to detect more subtle inappropriate comments.
 
 ```json Response Example:
