--- a/models/sentiment.mdx
+++ b/models/sentiment.mdx
@@ -3,6 +3,8 @@ title: "Sentiment model"
 sidebarTitle: "Sentiment"
 ---
 
+> Model key: `sentiment`
+
 The sentiment analyzer is trained to detect the sentiment of a text. It can detect positive, negative and neutral sentiment.<br/>
 
 <Note>
