--- a/models/spam.mdx
+++ b/models/spam.mdx
@@ -3,6 +3,8 @@ title: "Spam model"
 sidebarTitle: "Spam"
 ---
 
+> Model key: `quality`
+
 Detect spam and insubstantial text, etc.
 
 ```json Response Example:
