--- a/models/classifier-overview.mdx
+++ b/models/classifier-overview.mdx
@@ -3,17 +3,55 @@ title: "Classifiers overview"
 sidebarTitle: "Overview"
 ---
 
+Classifiers are used to label a text with a specific category. For example, you can use a classifier to label a text as positive or negative.
+
 ### Parameters
 
-| Parameter | Type   | Description                   |
-| --------- | ------ | ----------------------------- |
-| **value** | string | The text you want to analyze. |
+<ParamField body="value" type="string" required>
+  The text you want to classify.
+</ParamField>
 
 ### Returns
 
-Returns an object with the detected label and respective scores.
+Each classifier model returns an object with the detected label and the respective scores. This object is added to the API response under the model's key.
 
-| Parameter        | Type    | Description                                                                                                   |
-| ---------------- | ------- | ------------------------------------------------------------------------------------------------------------- |
-| **label**        | string? | The most probable label. Returns null if the analyzer fails.                                                  |
-| **label_scores** | obejct  | An object containing all the label scores. From 0-1 score with 1 meaning a high probability of being correct. |
+<ResponseField name="label" type="string" required>
+  The most probable label. This will always be the label with the highest score.
+  Returns null if the analyzer fails.
+</ResponseField>
+<ResponseField name="score" type="number" required>
+  The score of the label. From 0-1 score with 1 meaning a high probability of
+  being correct.
+</ResponseField>
+<ResponseField name="label_scores" type="object" required>
+  An object containing all the label scores.
+</ResponseField>
+
+## Ready-made text classifiers
+
+<CardGroup cols={3}>
+  <Card title="Toxicity" href="/models/toxicity" icon="fire">
+    Detects toxic content.
+  </Card>
+
+<Card title="NSFW" href="/models/NSFW" icon="flag">
+    Detects NSFW content.
+
+</Card>
+<Card title="Propriety" href="/models/propriety" icon="hand">
+    Detects inappropriate content.
+  </Card>
+
+<Card title="Sentiment" href="/models/sentiment" icon="heart">
+  Positive, negative, or neutral.
+</Card>
+
+<Card title="Spam" href="/models/spam" icon="star">
+  Detects spam.
+</Card>
+
+<Card title="Language" href="/models/language" icon="globe">
+  Detects the language.
+</Card>
+
+</CardGroup>
