--- a/models/toxicity.mdx
+++ b/models/toxicity.mdx
@@ -3,6 +3,8 @@ title: "Toxicity model"
 sidebarTitle: "Toxicity"
 ---
 
+> Model key: `toxicity`
+
 Works on the whole text to detect general features like profanity, swearing, racism, threats etc. Contrary to our [profanity filter](#swear-words-and-profanity) the toxicity analyzer will detect cases where the profanity is not as pronounced.
 
 ```json Toxicity Response Example:
