--- a/api-reference/authentication.mdx
+++ b/api-reference/authentication.mdx
@@ -3,6 +3,8 @@ title: "Authentication"
 description: "How to authenticate with the API"
 ---
 
+<Note>This page is under construction.</Note>
+
 ## Creating tokens
 
 <Note>
