--- a/models/classifier-overview.mdx
+++ b/models/classifier-overview.mdx
@@ -5,13 +5,7 @@ sidebarTitle: "Overview"
 
 Classifiers are used to label a text with a specific category. For example, you can use a classifier to label a text as positive or negative.
 
-### Parameters
-
-<ParamField body="value" type="string" required>
-  The text you want to classify.
-</ParamField>
-
-### Returns
+### Response signature
 
 Each classifier model returns an object with the detected label and the respective scores. This object is added to the API response under the model's key.
 
