--- a/_snippets/languages.mdx
+++ b/_snippets/languages.mdx
@@ -1,20 +1,19 @@
-## Languages
+## Supported languages
 
 This model works in the following languages:
 
-- English
-- Russian
-- Spanish
-- Portuguese
-- Italian
-- German
-- French
-- Indonesian
-- Chinese
-- Dutch
-- Swedish
-- Polish
-- Swedish
+- English `en`
+- Spanish `es`
+- French `fr`
+- German `de`
+- Italian `it`
+- Portuguese `pt`
+- Russian `ru`
+- Indonesian `id`
+- Chinese `zh`
+- Dutch `nl`
+- Polish `pl`
+- Swedish `sv`
 
 <Note>
   The model might work on other launguages we haven't tested. Feel free to try
