--- a/models/classifier-overview.mdx
+++ b/models/classifier-overview.mdx
@@ -28,7 +28,7 @@ Each classifier model returns an object with the detected label and the respecti
     Detects toxic content.
   </Card>
 
-<Card title="NSFW" href="/models/NSFW" icon="flag">
+<Card title="NSFW" href="/models/nsfw" icon="flag">
     Detects NSFW content.
 
 </Card>
