--- a/custom-models/overview.mdx
+++ b/custom-models/overview.mdx
@@ -2,3 +2,22 @@
 title: "Custom models"
 sidebarTitle: "Overview"
 ---
+
+Create custom models tailored to your specific needs and improve accuracy for special use cases.
+
+Training a custom model may seem daunting at first, but the workflow is userfriendly and designed so anyone can train a model with minimal effort. You can get started in less than 10 minutes.
+
+Custom models can help you:
+
+- Improve accuracy for special use cases
+- Improve models over time with self-learning
+- Classify your data with new labels
+- Bake all your policies into a single model
+
+## Training data
+
+You can train a model with as little as a 100 examples.
+
+If you don't have any data yet, you can start collecting it today with Moderation API. And use AI agents
+
+## Self-learning models
