--- a/get-started/concepts.mdx
+++ b/get-started/concepts.mdx
@@ -13,7 +13,7 @@ Each project has its own API key, so you can create multiple projects for exampl
 
 Models are used to analyze content. You can add multiple models to a project. Each model has its own settings and can be used to analyze content in a different way. <br></br>
 
-#### 3 classes of models
+#### 3 types of models
 
 <CardGroup cols={3}>
 
@@ -33,6 +33,12 @@ Models are used to analyze content. You can add multiple models to a project. Ea
 </Card>
 
 </CardGroup>
+
+| Model                 | Needs training data | Self-learning | Customizable | Accuracy | Effort |
+| --------------------- | ------------------- | ------------- | ------------ | -------- | ------ |
+| **Ready-made models** | No                  | No            | No           | High     | Low    |
+| **AI agents**         | No                  | No            | ✅           | Medium   | Medium |
+| **Custom models**     | ✅                  | ✅            | ✅           | High     | High   |
 
 ## Content queues
 
