--- a/custom-models/using.mdx
+++ b/custom-models/using.mdx
@@ -1,7 +1,9 @@
 ---
 title: "Using a custom model"
-sidebarTitle: "Using a custom model"
+sidebarTitle: "Using a model"
 ---
+
+When a model training has completed, the model will show up alongside all the ready-made models in your project, and you can add it like any other model.
 
 ### Response signature
 
