--- a/content-moderation/analyze-text.mdx
+++ b/content-moderation/analyze-text.mdx
@@ -5,6 +5,8 @@ sidebarTitle: "Analyze text"
 
 To analyze text, you need to send a POST request with the text to the [text moderation endpoint](/api-reference) and you will receive a response with the results right away.
 
+## Example
+
 ```javascript Node.js text analysis example
 const response = await fetch(
   "https://moderationapi.com/api/v1/moderation/text",
