--- a/content-queues/inviting-moderators.mdx
+++ b/content-queues/inviting-moderators.mdx
@@ -3,4 +3,31 @@ title: "Inviting moderators"
 sidebarTitle: "Inviting moderators"
 ---
 
-<Note>This page is under construction.</Note>
+Moderators are the people that will be reviewing your content in the moderation queues. Moderators don't have access to other parts of your dashboard, such as the settings, projects, or analytics.
+
+You can invite as many moderators to your as you want.
+
+<Info>
+  Adding team members may incur additional costs. Learn more about
+  [pricing](https://moderationapi.com/pricing).
+</Info>
+
+## How to invite moderators
+
+To invite moderators, go to the **Team** page in the sidebar and click on the **Invite moderators** button. You'll be asked to enter their email address and to select the queues they'll be moderating.
+
+[Invite moderators](https://moderationapi.com/app/moderation/team)
+
+Moderators will receive an email with a link to accept your invitation. Once they accept it, they'll be able to log in to your dashboard and start moderating your content.
+
+## How to remove moderators
+
+To remove a moderator, go to the **Team** page in the sidebar and click on the **Remove** button next to their name.
+
+[Remove moderators](https://moderationapi.com/app/moderation/team)
+
+## On demand moderation
+
+We offer on-demand moderation services for your platform. Our team of moderators is trained to moderate your content and can be available 24/7.
+
+If you're interested in this service, please [contact us](https://moderationapi.com/sales).
