--- a/content-queues/configuration.mdx
+++ b/content-queues/configuration.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Creating a new content queue"
-sidebarTitle: "Creating queues"
+sidebarTitle: "Creating a queue"
 ---
 
-<Note>This page is under construction.</Note>
+<Note>We are working on improving this page.</Note>
 
 To create a new queue you can press the plus button in side bar on the queue dashboard or simply [go to the page here](https://moderationapi.com/app/moderation/new).
