--- a/content-queues/using.mdx
+++ b/content-queues/using.mdx
@@ -3,7 +3,7 @@ title: "How to use content queues"
 sidebarTitle: "How to use queues"
 ---
 
-<Note>This page is under construction.</Note>
+<Note>We are working on improving this page.</Note>
 
 ### Image, video, and audio
 
