--- a/api-reference/analyze-text.mdx
+++ b/api-reference/analyze-text.mdx
@@ -1,8 +1,3 @@
 ---
-title: "Analyze text"
-api: "POST https://moderationapi.com/api/v1/moderation/text"
+openapi: post /moderation/text
 ---
-
-<ParamField body="value" type="string" required>
-  The text to analyze. Can be plain text or HTML.
-</ParamField>
