--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,17 +1,53 @@
 ---
 title: "Introduction"
-description: "Example section for showcasing API endpoints"
+description: "The Moderation API is organized around REST. Our API has predictable resource-oriented URLs, accepts JSON-encoded request bodies, returns JSON-encoded responses, and uses standard HTTP response codes, authentication, and verbs."
 ---
 
-## Welcome
+## Just getting started?
+
+Check out our quickstart guide to get up and running.
+
+<CardGroup cols={2}>
+  <Card title="Quickstart" icon="rocket" href="/docs/quickstart">
+    Get set up with Moderation API in 5 minutes.
+  </Card>
+  <Card
+    title="Guides"
+    icon="book"
+    href="/get-started/introduction#guides-to-get-started"
+  >
+    Learn ways to use Moderation API.
+  </Card>
+</CardGroup>
 
 ## Not a developer?
 
-If you're not a developer, you can still use the API. We have many [integrations and no-code solutions](https://moderationapi.com/integrations) that allows you to create projects and moderate content without writing a single line of code.
+If you're not a developer, you can still use the API. We have many integrations and no-code solutions that allows you to create projects and moderate content without writing a single line of code.
 
-<Note>
-  If you're not looking to build API reference documentation, you can delete
-  this section by removing the api-reference folder.
-</Note>
+<CardGroup cols={2}>
 
-## OpenAPI
+<Card
+  title="Integrations"
+  icon="cube"
+  href="https://moderationapi.com/integrations"
+>
+  See our integrations and no-code solutions.
+</Card>
+
+</CardGroup>
+
+## OpenAPI Specification
+
+Moderation API's OpenAPI specification empowers you with a broad set of developer tooling.
+
+<CardGroup cols={2}>
+
+<Card
+  title="OpenAPI Specification "
+  icon="code"
+  href="https://moderationapi.com/api/v1/openapi.json"
+>
+  Access the OpenAPI specification for the Moderation API.
+</Card>
+
+</CardGroup>
