--- a/models/propriety.mdx
+++ b/models/propriety.mdx
@@ -10,6 +10,7 @@ Detect sexual and flirty language. Closely related to the toxicity model but spe
 ```json Response Example:
 {
   "label": "FLIRTATION",
+  "score": 0.7784964,
   "label_scores": {
     "FLIRTATION": 0.7784964,
     "SEXUALLY_EXPLICIT": 0.315303,
