--- a/models/spam.mdx
+++ b/models/spam.mdx
@@ -10,6 +10,7 @@ Detect spam and insubstantial text, etc.
 ```json Response Example:
 {
   "label": "SPAM",
+  "score": 0.9337343,
   "label_scores": {
     "SPAM": 0.9337343,
     "INCOHERENT": 0.89032257,
