--- a/api-reference/authentication.mdx
+++ b/api-reference/authentication.mdx
@@ -1,13 +1,28 @@
 ---
 title: "Authentication"
 description: "How to authenticate with the API"
+api: "GET https://moderationapi.com/api/v1/auth"
 ---
 
-<Note>This page is under construction.</Note>
+The Moderation API uses [API keys](/content-moderation/manage-api-key) to authenticate requests. You can view and manage your API keys in your [Dashboard](https://moderationapi.com/app) under each project.
 
-## Creating tokens
+Your API keys carry many privileges, so be sure to keep them secure. Don't share your secret API keys in publicly accessible areas such as GitHub, client-side code, and so forth.
+
+Authentication to the API is performed with the Authorization header when making a HTTP request. Provide your API key prefixed with `Bearer` as the value of the Authorization header.
+
+<ResponseExample>
+```json
+{
+  "status": "success",
+  "message": "Valid API key",
+  "project": "My Project Name"
+}
+```
+</ResponseExample>
+
+You must make all API calls over HTTPS. Calls that you make over plain HTTP will fail. API requests without authentication will also fail.
 
 <Note>
-  We recommend to create two projects in your dashboard, one for development and
+  We recommend creating two projects in your dashboard, one for development and
   one for production. This way you can create tokens for both environments.
 </Note>
