--- a/api-reference/rate-limits.mdx
+++ b/api-reference/rate-limits.mdx
@@ -1,11 +1,18 @@
 ---
 title: "Rate limits"
+description: "Learn about API rate limits and how to work with them."
 ---
 
-The default API rate limit is 10 requests per 10 seconds.
+The default API rate limit is 60 requests per minute.
 
 We may reduce limits to prevent abuse, or increase limits to enable high-traffic applications. To request an increased rate limit, please contact support.
 
-### Handling rate limts
+## Handling rate limts
 
 A basic technique for integrations to gracefully handle limiting is to watch for `429` status codes and build in a retry mechanism. The retry mechanism should follow an exponential backoff schedule to reduce request volume when necessary.
+
+## Checking your rate limit
+
+You can check your current rate limit in your [dashboard under usage](https://moderationapi.com/app/usage).
+
+You might also want to check what your peak usage is for a given time period. You can do in the [analytics page](https://moderationapi.com/app/analytics) in your dashboard. Check the Peak RPM chart.
