--- a/api-reference/authentication.mdx
+++ b/api-reference/authentication.mdx
@@ -4,7 +4,7 @@ description: "How to authenticate with the API"
 api: "GET https://moderationapi.com/api/v1/auth"
 ---
 
-The Moderation API uses [API keys](/content-moderation/manage-api-key) to authenticate requests. You can view and manage your API keys in your [Dashboard](https://moderationapi.com/app) under each project.
+The Moderation API uses [API keys](/content-moderation/manage-api-key) to authenticate requests. Each project has its own API key. You can view and manage your API keys in the [dashboard](https://moderationapi.com/dashboard) -> Project -> Integrate.
 
 Your API keys carry many privileges, so be sure to keep them secure. Don't share your secret API keys in publicly accessible areas such as GitHub, client-side code, and so forth.
 
