--- a/content-moderation/manage-api-key.mdx
+++ b/content-moderation/manage-api-key.mdx
@@ -7,8 +7,12 @@ description: "How to manage your project API key"
 <Warning>
   Keep your API key secret. Anyone with your API key can use your project.
 </Warning>
+<Warning>
+  Deleting a project also deletes all API keys associated with the project.
+</Warning>
 
-After you've created a project, you can find the API key in the project integration page in the sidebar.<br></br>
+After you've created a project, you can find the API key in the project
+integration page in the sidebar.<br></br>
 
 <Frame>
   <img className="block " src="/images/api-key.png" alt="Project API key" />
